alteração package.json

--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   },
   "dependencies": {
     "mysql": "^2.16.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/luannrodrigo/crud-protfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/luannrodrigo/crud-protfolio/issues"
+  },
+  "homepage": "https://github.com/luannrodrigo/crud-protfolio#readme"
 }
