--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "api",
   "version": "2.0.0",
   "description": "portfolio",
-  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luann Rodrigo",
