--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "event-stream": "^4.0.1",
     "mysql": "^2.16.0"
   },
   "repository": {
